--- a/PAGES/7b_benchmarks/index.html
+++ b/PAGES/7b_benchmarks/index.html
@@ -2691,11 +2691,11 @@ x &#61; rand&#40;100&#41;
     </div>
   </div>
 </section>
-<section id="chairmarks" class="scrollspy section-bg-color">
+<section id="package_chairmarks" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
-        <h2>Chairmarks</h2></p>
+        <h2>Package "Chairmarks"</h2></p>
 <p>A recent new alternative to benchmarking code is given by the package <code>Chairmarks</code>. Its notation is quite similar to <code>BenchmarkTools</code>, with the macros <code>@b</code> and <code>@be</code> providing a similar functionality to <code>@btime</code> and <code>@benchmark</code> respectively. However, <code>Chairmarks</code> is orders of magnitude faster. </p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -3447,7 +3447,7 @@ for multiple pics in a row
         </li>
         
         <li>
-          <a href="#chairmarks" data-offset="-40">Chairmarks</a>
+          <a href="#package_chairmarks" data-offset="-40">Package "Chairmarks"</a>
         </li>
         
         <li>
