--- a/PAGES/1b_basics/index.html
+++ b/PAGES/1b_basics/index.html
@@ -2578,7 +2578,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2588,7 +2588,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="using_julia_in_vs_code" class="scrollspy section-bg-color">
+<section id="using_julia_in_vs_code" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2609,7 +2609,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="adding_comments_in_a_script" class="scrollspy">
+<section id="adding_comments_in_a_script" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2629,7 +2629,7 @@ x &#61; 2   # &#96;x&#61;2&#96; is run, but anything after &#96;#&#96; won&#39;t
     </div>
   </div>
 </section>
-<section id="paths_of_files_and_folders" class="scrollspy section-bg-color">
+<section id="paths_of_files_and_folders" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2650,7 +2650,7 @@ joinpath&#40;&quot;/&quot;, &quot;user&quot;, &quot;julia&quot;&#41;</code></pre
     </div>
   </div>
 </section>
-<section id="executing_code_from_a_file" class="scrollspy">
+<section id="executing_code_from_a_file" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2708,7 +2708,7 @@ joinpath&#40;&quot;/&quot;, &quot;user&quot;, &quot;julia&quot;&#41;</code></pre
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 13, 2024 
+          © Martin Alfaro <br>Last Modified June 20, 2024 
       </span> 
   </div> 
 </footer>
