--- a/PAGES/2a_variables/index.html
+++ b/PAGES/2a_variables/index.html
@@ -2650,8 +2650,8 @@ x -&#61; 3        # equivalent</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Types</h2></p>
-<p>To effectively work with Julia, it&#39;s necessary to understand some fundamental principles related to types. At this point, we&#39;ll only present the bare minimum for the concepts of the upcoming chapters. Types will be revisited in more depth during Part II of this website.</p>
-<p>Objects can be broadly classified into <strong>single-element objects</strong> and <strong>collections of elements</strong>, which are respectively refered to as <span style="color: rgb(62, 121, 180);"><strong>scalars</strong></span> and <span style="color: rgb(62, 121, 180);"><strong>collections</strong></span>. The following lists outline the main types you can find in each category.</p>
+<p>To effectively work with Julia, it&#39;s necessary to understand some fundamental principles related to types. At this point, we&#39;ll only present the bare minimum for the upcoming chapters. The subject will be revisited in more depth during Part II of this website.</p>
+<p>Objects can be broadly classified into <strong>single-element objects</strong> and <strong>multiple-element objects</strong>, which are respectively referred to as <span style="color: rgb(62, 121, 180);"><strong>scalars</strong></span> and <span style="color: rgb(62, 121, 180);"><strong>collections</strong></span>. The following lists outline the main types you can find in each category.</p>
  <div class="multiple_pics">
   <!-- <h2 style="color:rgb(63, 99,136)">Objects</h2> -->
     <img src="/julia_book/assets/PAGES/2a_variables/tikz/list_variables01.svg" style="width:700px; height:auto; margin-top:1em; margin-bottom:1em;">  
@@ -2664,8 +2664,8 @@ x -&#61; 3        # equivalent</code></pre>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Notation for Types</strong>  </span>  </div>  <div class=content>     Julia&#39;s developers recommend using <strong>CamelCase</strong> notation for denoting types. This consists of capitalizing every first letter, as in <code>MyType</code>.  </div>  </div>
  <h4> Type Hierarchy: Concrete Types and Abstract Types </h4>
-<p>Types in Julia are organized in a hierarchical structure, enabling the definition of <strong>supersets and subsets of types</strong>. In programming parlance, there are respectively referred to as <strong>supertypes</strong> and <strong>subtypes</strong>. </p>
-<p>This hierarchy gives rise in particular to the notions of abstract and concrete types. An <span style="color: rgb(62, 121, 180);"><strong>abstract type</strong></span> is a set of types that serve as a parent to other types. The type <code>Any</code> in Julia is a prime example, which comprises all possible subtypes—by definition, every type in Julia is a subtype of <code>Any</code>. In contrast, a <span style="color: rgb(62, 121, 180);"><strong>concrete type</strong></span> represents an irreducible unit lacking subtypes. It covers in particular <strong>primitive types</strong>, which are the fundamental types used by computers to perform calculations. Examples of primitive types are <code>Int64</code> and <code>Float64</code>.</p>
+<p>Types in Julia are organized in a hierarchical structure, enabling the definition of <strong>supersets and subsets of types</strong>. In programming parlance, they&#39;re respectively referred to as <strong>supertypes</strong> and <strong>subtypes</strong>. </p>
+<p>The hierarchy gives rise in particular to the notions of abstract and concrete types. An <span style="color: rgb(62, 121, 180);"><strong>abstract type</strong></span> is a set of types that serve as a parent to other types. The <code>Any</code> type in Julia is a prime example, which comprises all possible subtypes—by definition, every type in Julia is a subtype of <code>Any</code>. In contrast, a <span style="color: rgb(62, 121, 180);"><strong>concrete type</strong></span> represents an irreducible unit, therefore lacking subtypes. It covers in particular <strong>primitive types</strong>, which are the fundamental types used by computers to perform calculations. Examples of primitive types are <code>Int64</code> and <code>Float64</code>.</p>
 <p>Abstract types provide great flexibility for writing code. For example, Julia includes the abstract type <code>Number</code>, which encompasses all possible numeric types &#40;e.g., <code>Float64</code>, <code>Int64</code>, <code>Float32</code>&#41;. This allows you to declare a variable with the generic type <code>Number</code>, without the need to specify whether it&#39;s an integer, float, or its numerical precision.</p>
 <p>Below, we demonstrate the concept of abstract and concrete types using the <code>Number</code> type as an example. Although <code>Number</code> encompasses a broader range of subtypes than depicted in the table, we&#39;ve intentionally simplified the representation for clarity. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The subtype <code>Signed</code> from <code>Integers</code> represents integers that can be either negative or positive. Julia also offers the type <code>Unsigned</code>, which encompasses subtypes <code>UInt64</code>, <code>UInt32</code>, etc., and only accepts positive integers.  </span></span>  It&#39;s also worth noting that the names on the table match an exact name of each type.</p>
  <div class="multiple_pics">
@@ -2718,7 +2718,7 @@ x -&#61; 3        # equivalent</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 13, 2024 
+          © Martin Alfaro <br>Last Modified June 20, 2024 
       </span> 
   </div> 
 </footer>
