--- a/PAGES/6b_pipes/index.html
+++ b/PAGES/6b_pipes/index.html
@@ -2578,7 +2578,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2589,7 +2589,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="let_blocks" class="scrollspy section-bg-color">
+<section id="let_blocks" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2672,7 +2672,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="pipes" class="scrollspy">
+<section id="pipes" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2834,7 +2834,7 @@ output &#61; @pipe a            |&gt;
     </div>
   </div>
 </section>
-<section id="function_composition_optional" class="scrollspy section-bg-color">
+<section id="function_composition_optional" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2946,7 +2946,7 @@ output       &#61; &#91;foo&#40;a&#41; for foo in compositions&#93;</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 13, 2024 
+          © Martin Alfaro <br>Last Modified June 20, 2024 
       </span> 
   </div> 
 </footer>
