--- a/PAGES/7d_TS-onFunctions/index.html
+++ b/PAGES/7d_TS-onFunctions/index.html
@@ -2537,7 +2537,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2548,7 +2548,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="relevance_of_functions" class="scrollspy">
+<section id="relevance_of_functions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2585,7 +2585,7 @@ foo&#40;&#41; &#61; 3 * x</code></pre>
     </div>
   </div>
 </section>
-<section id="functions_and_methods" class="scrollspy section-bg-color">
+<section id="functions_and_methods" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2618,7 +2618,7 @@ z &#61; sum&#40;log, x&#41;     # log&#40;2&#41; &#43; log&#40;3&#41; &#43; log&
     </div>
   </div>
 </section>
-<section id="multiple_dispatch" class="scrollspy">
+<section id="multiple_dispatch" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2656,7 +2656,7 @@ z &#61; sum&#40;log, x&#41;     # log&#40;2&#41; &#43; log&#40;3&#41; &#43; log&
     </div>
   </div>
 </section>
-<section id="compilation_and_type_inference" class="scrollspy section-bg-color">
+<section id="compilation_and_type_inference" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2685,7 +2685,7 @@ foo&#40;x&#41; &#61; x&#91;1&#93; &#43; x&#91;2&#93;        # type unstable</cod
     </div>
   </div>
 </section>
-<section id="remarks_on_type_inference" class="scrollspy">
+<section id="remarks_on_type_inference" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2784,7 +2784,7 @@ foo&#40;a&#41;    &#61; a * b</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 13, 2024 
+          © Martin Alfaro <br>Last Modified June 20, 2024 
       </span> 
   </div> 
 </footer>
