--- a/PAGES/8d_TS-tuples/index.html
+++ b/PAGES/8d_TS-tuples/index.html
@@ -2537,7 +2537,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2551,7 +2551,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="features_of_tuples" class="scrollspy">
+<section id="features_of_tuples" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2668,7 +2668,7 @@ end
     </div>
   </div>
 </section>
-<section id="dispatch_by_value" class="scrollspy section-bg-color">
+<section id="dispatch_by_value" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2797,7 +2797,7 @@ end
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 13, 2024 
+          © Martin Alfaro <br>Last Modified June 20, 2024 
       </span> 
   </div> 
 </footer>
