--- a/PAGES/9d_reductions/index.html
+++ b/PAGES/9d_reductions/index.html
@@ -2540,7 +2540,7 @@ color: white;
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b> Remark</b> </span>  </div>  <div class=content>     The scripts of this section are available <a href="https://github.com/alfaromartino/julia_book/tree/main//assets/PAGES/9d_reductions/codeDownload"><strong>here</strong></a> under the name <code>allCode.jl</code>. They&#39;ve been tested under Julia 1.10.0.  </div>  </div>
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2552,7 +2552,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="intuition_about_reductions" class="scrollspy">
+<section id="intuition_about_reductions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2720,7 +2720,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="avoiding_memory_allocations_through_reductions" class="scrollspy section-bg-color">
+<section id="avoiding_memory_allocations_through_reductions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2812,7 +2812,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="reductions_via_built-in_functions" class="scrollspy">
+<section id="reductions_via_built-in_functions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2890,7 +2890,7 @@ foo&#40;x,y&#41; &#61; minimum&#40;a -&gt; a&#91;1&#93; * a&#91;2&#93;, zip&#40;
     </div>
   </div>
 </section>
-<section id="the_reduce_and_mapreduce_functions" class="scrollspy section-bg-color">
+<section id="the_reduce_and_mapreduce_functions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2976,7 +2976,7 @@ foo&#40;x&#41; &#61; reduce&#40;&#43;, map&#40;a -&gt; 3 * a, x&#41;&#41;</code>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 13, 2024 
+          © Martin Alfaro <br>Last Modified June 20, 2024 
       </span> 
   </div> 
 </footer>
