--- a/PAGES/9e_staticVectors/index.html
+++ b/PAGES/9e_staticVectors/index.html
@@ -2540,7 +2540,7 @@ color: white;
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b> Remark</b> </span>  </div>  <div class=content>     The scripts of this section are available <a href="https://github.com/alfaromartino/julia_book/tree/main//assets/PAGES/9e_staticVectors/codeDownload"><strong>here</strong></a> under the name <code>allCode.jl</code>. They&#39;ve been tested under Julia 1.10.0.  </div>  </div>
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2555,7 +2555,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="creating_static_vectors" class="scrollspy section-bg-color">
+<section id="creating_static_vectors" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2633,7 +2633,7 @@ slice2 &#61; sx&#91;&#91;1,2&#93;&#93;</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="svectors_dont_allocate_and_are_faster" class="scrollspy">
+<section id="svectors_dont_allocate_and_are_faster" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2736,7 +2736,7 @@ foo&#40;x&#41; &#61; sum&#40;a -&gt; 10 &#43; 2a &#43;  3a^2, x&#41;</code></pre
     </div>
   </div>
 </section>
-<section id="svector_type_and_its_mutable_variant" class="scrollspy section-bg-color">
+<section id="svector_type_and_its_mutable_variant" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2809,7 +2809,7 @@ mx &#61; similar&#40;sx&#41;        # it defines an MVector with undef elements<
     </div>
   </div>
 </section>
-<section id="using_static_vectors" class="scrollspy">
+<section id="using_static_vectors" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2898,7 +2898,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="the_number_of_elements_is_part_of_svectors_type" class="scrollspy section-bg-color">
+<section id="the_number_of_elements_is_part_of_svectors_type" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2983,7 +2983,7 @@ end
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 13, 2024 
+          © Martin Alfaro <br>Last Modified June 20, 2024 
       </span> 
   </div> 
 </footer>
