--- a/PAGES/3a_packages/index.html
+++ b/PAGES/3a_packages/index.html
@@ -2578,7 +2578,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2599,7 +2599,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="packages" class="scrollspy">
+<section id="packages" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2611,7 +2611,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="loading_packages_and_calling_functions" class="scrollspy section-bg-color">
+<section id="loading_packages_and_calling_functions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2644,7 +2644,7 @@ mean&#40;x&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="built-in_functions" class="scrollspy">
+<section id="built-in_functions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2716,7 +2716,7 @@ mean&#40;x&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="why_using_import_if_its_more_verbose" class="scrollspy section-bg-color">
+<section id="why_using_import_if_its_more_verbose" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2730,7 +2730,7 @@ mean&#40;x&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="approaches_for_loading_packages_and_calling_functions" class="scrollspy">
+<section id="approaches_for_loading_packages_and_calling_functions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2789,7 +2789,7 @@ average&#40;x&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="macros" class="scrollspy section-bg-color">
+<section id="macros" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2830,7 +2830,7 @@ average&#40;x&#41;</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 13, 2024 
+          © Martin Alfaro <br>Last Modified June 20, 2024 
       </span> 
   </div> 
 </footer>
