--- a/PAGES/3d_vectorizing/index.html
+++ b/PAGES/3d_vectorizing/index.html
@@ -2578,7 +2578,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2596,7 +2596,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="the_map_function" class="scrollspy section-bg-color">
+<section id="the_map_function" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2707,7 +2707,7 @@ z &#61; map&#40;&#43;, x, y&#41;        # recall that &#96;&#43;&#96; is both an
     </div>
   </div>
 </section>
-<section id="broadcasting" class="scrollspy">
+<section id="broadcasting" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2719,7 +2719,7 @@ z &#61; map&#40;&#43;, x, y&#41;        # recall that &#96;&#43;&#96; is both an
     </div>
   </div>
 </section>
-<section id="broadcasting_functions" class="scrollspy section-bg-color">
+<section id="broadcasting_functions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2815,7 +2815,7 @@ region        &#61;  &#91;&quot;Europe&quot;, &quot;North America&quot;&#93;</co
     </div>
   </div>
 </section>
-<section id="broadcasting_operators" class="scrollspy">
+<section id="broadcasting_operators" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2850,7 +2850,7 @@ y &#61; &#91;-1, -2, -3&#93;</code></pre>
     </div>
   </div>
 </section>
-<section id="broadcasting_operators_with_single-element_objects" class="scrollspy section-bg-color">
+<section id="broadcasting_operators_with_single-element_objects" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2896,7 +2896,7 @@ region        &#61;  &#91;&quot;Europe&quot;, &quot;North America&quot;&#93;</co
     </div>
   </div>
 </section>
-<section id="iterable_objects" class="scrollspy">
+<section id="iterable_objects" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2979,7 +2979,7 @@ z    &#61; temp .^ 2</code></pre>
     </div>
   </div>
 </section>
-<section id="broadcasting_functions_vs_broadcasting_operators" class="scrollspy section-bg-color">
+<section id="broadcasting_functions_vs_broadcasting_operators" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3018,7 +3018,7 @@ vector_squared&#40;x&#41; &#61; x .^ 2         # function for a vector &#39;x&#3
     </div>
   </div>
 </section>
-<section id="broadcasting_over_one_argument_only" class="scrollspy">
+<section id="broadcasting_over_one_argument_only" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3120,7 +3120,7 @@ list &#61; &#91;1, 2, 3&#93;</code></pre>
     </div>
   </div>
 </section>
-<section id="currying_and_fixing_arguments_optional" class="scrollspy section-bg-color">
+<section id="currying_and_fixing_arguments_optional" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3260,7 +3260,7 @@ list &#61; &#91;1, 2, 3&#93;</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 13, 2024 
+          © Martin Alfaro <br>Last Modified June 20, 2024 
       </span> 
   </div> 
 </footer>
