--- a/PAGES/4b_conditionals/index.html
+++ b/PAGES/4b_conditionals/index.html
@@ -2578,7 +2578,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2601,7 +2601,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="if-then_statements" class="scrollspy section-bg-color">
+<section id="if-then_statements" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2649,7 +2649,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="if-else_statements" class="scrollspy">
+<section id="if-else_statements" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2719,7 +2719,7 @@ x_absolute_value &#61; ifelse.&#40;x .≥ 0, x, -x&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="if-else-if_statements" class="scrollspy section-bg-color">
+<section id="if-else-if_statements" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2780,7 +2780,7 @@ end</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 13, 2024 
+          © Martin Alfaro <br>Last Modified June 20, 2024 
       </span> 
   </div> 
 </footer>
