--- a/PAGES/5b_mutation/index.html
+++ b/PAGES/5b_mutation/index.html
@@ -2578,7 +2578,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2597,7 +2597,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="some_background" class="scrollspy section-bg-color">
+<section id="some_background" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2620,7 +2620,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="assignments" class="scrollspy">
+<section id="assignments" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2631,7 +2631,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="mutations" class="scrollspy section-bg-color">
+<section id="mutations" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2667,7 +2667,7 @@ x&#91;:&#93; &#61;  &#91;0,0&#93;</code></pre>
     </div>
   </div>
 </section>
-<section id="alias_vs_copy" class="scrollspy">
+<section id="alias_vs_copy" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2768,7 +2768,7 @@ x&#91;1&#93; &#61;  0</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 13, 2024 
+          © Martin Alfaro <br>Last Modified June 20, 2024 
       </span> 
   </div> 
 </footer>
