--- a/PAGES/8a_TS-definition/index.html
+++ b/PAGES/8a_TS-definition/index.html
@@ -2537,7 +2537,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2547,7 +2547,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="an_intuition" class="scrollspy section-bg-color">
+<section id="an_intuition" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2565,7 +2565,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="an_example" class="scrollspy">
+<section id="an_example" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2600,7 +2600,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="checking_for_type_stability" class="scrollspy section-bg-color">
+<section id="checking_for_type_stability" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2671,7 +2671,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="yellow_warnings_may_turn_red" class="scrollspy">
+<section id="yellow_warnings_may_turn_red" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2751,7 +2751,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="scalars_and_vectors" class="scrollspy section-bg-color">
+<section id="scalars_and_vectors" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2809,7 +2809,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="type_stability_with_scalars" class="scrollspy">
+<section id="type_stability_with_scalars" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2886,7 +2886,7 @@ foo&#40;1, 2.5&#41;         # type UNSTABLE -&gt; &#96;a * i&#96; is either &#96
     </div>
   </div>
 </section>
-<section id="type_stability_with_vectors" class="scrollspy section-bg-color">
+<section id="type_stability_with_vectors" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3026,7 +3026,7 @@ sum&#40;x6&#41;             # type UNSTABLE -&gt; &#96;sum&#96; must consider al
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 13, 2024 
+          © Martin Alfaro <br>Last Modified June 20, 2024 
       </span> 
   </div> 
 </footer>
