--- a/PAGES/8c_barrierFunctions/index.html
+++ b/PAGES/8c_barrierFunctions/index.html
@@ -2537,7 +2537,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2551,7 +2551,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="applying_barrier_functions" class="scrollspy section-bg-color">
+<section id="applying_barrier_functions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2599,7 +2599,7 @@ end
     </div>
   </div>
 </section>
-<section id="remarks_on_code_warntype" class="scrollspy">
+<section id="remarks_on_code_warntype" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2724,7 +2724,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 13, 2024 
+          © Martin Alfaro <br>Last Modified June 20, 2024 
       </span> 
   </div> 
 </footer>
