--- a/PAGES/9c_preallocations/index.html
+++ b/PAGES/9c_preallocations/index.html
@@ -2537,7 +2537,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2551,7 +2551,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="initializing_vectors" class="scrollspy">
+<section id="initializing_vectors" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2682,7 +2682,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="pre-allocating_vectors_in_nested_for-loops" class="scrollspy section-bg-color">
+<section id="pre-allocating_vectors_in_nested_for-loops" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2844,7 +2844,7 @@ calling_foo_in_a_loop&#40;output,x&#41; &#61; &#91;sum&#40;foo&#33;&#40;output,x
     </div>
   </div>
 </section>
-<section id="pre-allocations_and_intermediate_steps" class="scrollspy">
+<section id="pre-allocations_and_intermediate_steps" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3053,7 +3053,7 @@ calling_foo_in_a_loop&#40;x, output, temp&#41; &#61; &#91;foo&#33;&#40;x, output
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 13, 2024 
+          © Martin Alfaro <br>Last Modified June 20, 2024 
       </span> 
   </div> 
 </footer>
